styles/Experience.module.css
.gridContainer {
  position: relative;
  padding: 10px;
  width: 100%;
}

@media only screen and (min-width: 981px) {
  .gridContainer {
    width: 75%;
  }
}

.rowContainer {
  display: grid;
  grid-template-columns: minmax(125px, 1fr) 8fr;
  align-items: center;
}

.cardContainer {
  background: #262626;
  animation: fadeInAnimation 0.5s ease-in;
  border-radius: 25px;
  padding: 15px;
  box-shadow: 0px 0px 8px;
  margin: 15px;
  color: rgb(220,220,220);
}

@keyframes fadeInAnimation {
  0% {
      opacity: 0;
  }
  100% {
      opacity: 1;
   }
}

.cardHeader {
  text-align: center;
  margin: 0;
  color: rgb(255,255,255)
}

.cardBody {
  margin: 0;
  padding-left: 20px;
}

.cardLi {
  padding-left: 0;
}

@media only screen and (max-width: 981px) {
  .rowImg {
    width: 0;
    display: none;
  }
  .rowContainer {
    grid-template-columns: 1fr;
  }
}

.footerContainer {
  position: relative;
  height: auto;
  margin: auto;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end;
  flex: 1;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
  width: 80%;
  padding-top: 15px;
}

.footerIcon {
  height: 32px;
  width: 32px;
  margin: 0 10px;
}

.techTooltip {
  position: relative;
  display: inline-block;
}

.tooltipText {
  font-size: small;
}

.techTooltip .tooltipText {
  visibility: hidden;
  width: max-content;
  background-color: #666;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 10px;
  position: absolute;
  z-index: 1;
  bottom: calc(100% + 5px);
  left: 50%;
  transform: translate(-50%);
  opacity: 0;
  transition: opacity 0.3s;
}

.techTooltip .tooltipText::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #666 transparent transparent transparent;
}

.techTooltip:hover .tooltipText {
  visibility: visible;
  opacity: 1;
}

